--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,9 @@
-hi
+version 0.0.1-1<br>
+
+
+<li><a href="..">...</a>
+<li><a href="..">...</a>
+<li><a href="..">...</a>
+<li><a href="..">...</a>
+
+
