--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 version 0.0.1-1<br>
 
+<h2> Jeremy Index </h2>
 
-<li><a href="..">...</a>
+<li><a href="trash.html">trash.html</a>
 <li><a href="..">...</a>
 <li><a href="..">...</a>
 <li><a href="..">...</a>
