--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,13 @@
-version 0.0.2<br>
+version 0.1.0-3<br>
 
 <h2> Jeremy Index </h2>
 <li><a href="https://hpssjellis.github.io/gameDev2023-trash/public/index.html">https://hpssjellis.github.io/gameDev2023-trash/public/index.html</a>
 
  <hr>
   
-  
+ 
+ Fancy debugging at ctrl-shift-i<br><br>
+
 <li><a href="trash.html">trash.html</a>
 <li><a href="..">...</a>
 <li><a href="..">...</a>
