--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,23 @@
-version 0.1.0-3<br>
+version 0.1.1-4<br>
 
 <h2> Jeremy Index </h2>
+
+My Main website  
 <li><a href="https://hpssjellis.github.io/gameDev2023-trash/public/index.html">https://hpssjellis.github.io/gameDev2023-trash/public/index.html</a>
 
+ <br>
+ 
+ My MAIN gITHUB
+ 
+ <li><a href="https://github.com/hpssjellis/gameDev2023-trash/blob/main/public/index.html">https://github.com/hpssjellis/gameDev2023-trash/blob/main/public/index.html</a>
+
+ 
  <hr>
   
  
  Fancy debugging at ctrl-shift-i<br><br>
 
 <li><a href="trash.html">trash.html</a>
-<li><a href="..">...</a>
 <li><a href="..">...</a>
 
 
