--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-version 0.1.1-4<br>
+version 0.1.2-5<br>
 
 <h2> Jeremy Index </h2>
 
@@ -9,7 +9,7 @@ My Main website
  
  My MAIN gITHUB
  
- <li><a href="https://github.com/hpssjellis/gameDev2023-trash/blob/main/public/index.html">https://github.com/hpssjellis/gameDev2023-trash/blob/main/public/index.html</a>
+ <li><a href="https://github.com/hpssjellis/gameDev2023-trash">https://github.com/hpssjellis/gameDev2023-trash</a>
 
  
  <hr>
