--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@ My Main website
 
  <br>
  
- My MAIN gITHUB
+Main Github
  
  <li><a href="https://github.com/hpssjellis/gameDev2023-trash">https://github.com/hpssjellis/gameDev2023-trash</a>
 
